--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: alistar.huang@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   simple
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://lessrandom.github.io #the base hostname & protocol for your site
+url: http://ftdalpha.com/lessrandom.github.io #the base hostname & protocol for your site
 # rss_url: /pages/feed.xml
 encoding: UTF-8
 # Sidebar filter
